# simple-rust-kvs

./: Cargo.toml  LICENSE  README.md
bench_reports/engine_benches/get_bench/report/: index.html
bench_reports/engine_benches/set_bench/report/: index.html
bench_reports/get_bench/kvs_10/base/: sample.json
bench_reports/get_bench/kvs_10/new/: raw.csv
bench_reports/get_bench/kvs_10/report/: index.html
bench_reports/get_bench/kvs_12/base/: benchmark.json  raw.csv  sample.json
bench_reports/get_bench/kvs_12/change/: estimates.json
bench_reports/get_bench/kvs_12/new/: estimates.json
bench_reports/get_bench/kvs_2/base/: raw.csv  sample.json
bench_reports/get_bench/kvs_2/report/: index.html
bench_reports/get_bench/kvs_4/base/: benchmark.json  raw.csv
bench_reports/get_bench/kvs_4/new/: estimates.json  tukey.json
bench_reports/get_bench/kvs_4/report/: index.html
bench_reports/get_bench/kvs_8/base/: benchmark.json  sample.json  tukey.json
bench_reports/get_bench/kvs_8/change/: estimates.json
bench_reports/get_bench/kvs_8/report/: index.html
bench_reports/get_bench/sled_10/new/: benchmark.json
bench_reports/get_bench/sled_12/base/: benchmark.json  tukey.json
bench_reports/get_bench/sled_12/new/: sample.json
bench_reports/get_bench/sled_2/new/: benchmark.json  estimates.json
bench_reports/get_bench/sled_2/report/: index.html
bench_reports/get_bench/sled_4/base/: estimates.json  raw.csv  tukey.json
bench_reports/get_bench/sled_4/new/: benchmark.json
bench_reports/get_bench/sled_4/report/: index.html
bench_reports/get_bench/sled_8/base/: raw.csv  sample.json
bench_reports/report/: index.html
bench_reports/set_bench/kvs/base/: sample.json
bench_reports/set_bench/kvs/new/: estimates.json  raw.csv
benches/: benches.rs  concurrency_benches.rs  engine_benches.rs
src/: client.rs  errors.rs  kv.rs  lib.rs  network.rs  server.rs
src/client/: mod.rs  sync_client.rs
src/engines/: kvs.rs  mod.rs  sled.rs
src/server/: async_server.rs  mod.rs  sync_server.rs
src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
tests/: tests.rs
(+39 files in other folders)
