[package]
authors = ["RinChanNOWWW <hzy427@gmail.com>"]
description = "My designation of a Key-Value Store (pingcap talent-plan)."
edition = "2018"
name = "kvs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
failure = "0.1.8"
serde = "1.0.123"
serde_json = "1.0.62"
[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
