[package]
authors = ["RinChanNOWWW <hzy427@gmail.com>"]
description = "My designation of a Key-Value Store (pingcap talent-plan)."
edition = "2018"
name = "kvs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
crossbeam = "0.8.0"
crossbeam-skiplist = {git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master"}
env_logger = "0.8.3"
failure = "0.1.8"
log = "0.4"
num_cpus = "1.13.0"
rayon = "1.5.0"
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.62"
sled = "0.34.6"
[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
[[bench]]
harness = false
name = "concurrency_benches"
